Completed almost everything, REMEMBER to fix signup btn spacing

--- a/css/footer.css
+++ b/css/footer.css
@@ -15,7 +15,7 @@ footer#bottomPage {
 	behavior: url(PIE.htc);
 }
 section.info, section.quickLinks, section.signUp  {
-	width: 316px;
+	width: 320px;
 }
 
 section.info > h3, section.quickLinks > h3 {
@@ -51,7 +51,7 @@ section.quickLinks > ul > li:first-child, section.info > ul > li:first-child {
 	font-weight: bold;
 }
 
-section.signUp > input{
+section.signUp input[type="email"]{
 	width: 224px;
 	height: 24px;
 	padding-left: 10px;
@@ -63,11 +63,18 @@ section.signUp > input{
 	margin-top: 17px;
 }
 
+form.userEmailSender {
+	height: 45px;
+}
 footer > hr {
 	border-top: 1px solid #c1c1c1;
 	border-bottom: 1px solid #fff;
 	margin: 10px -10px 0px;
 	width: 980px;
+}
+
+nav#bottomNav {
+	width: 500px;
 }
 
 nav#bottomNav ul li {
@@ -86,3 +93,29 @@ nav#bottomNav ul li:first-child a {
 	border: none;
 	padding: 0;
 }
+
+footer span#copyright {
+	font-size: 11px;
+	float: right;
+	margin-top: 9px;
+	color: #666666;
+}
+
+section.signUp input[type="submit"]{
+	background: url('../images/signup_btn_bg.png') repeat-x;
+	border: 1px none #000000;
+	width: 67px;
+	height: 25px;
+	margin-top: 17px;
+	-moz-box-shadow:    3px 4px 4px -2px #a8a8a8;
+    -webkit-box-shadow: 3px 4px 4px -2px #a8a8a8;
+    box-shadow:         3px 4px 4px -2px #a8a8a8;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	behavior: url(PIE.htc);
+	text-shadow: #FF8A00 0px -2px 0px;
+	color: #fff;
+	font-weight: bold;
+}
+
