--- a/css/newsEventsPartners.css
+++ b/css/newsEventsPartners.css
@@ -23,7 +23,7 @@ section.twoColumns .right {
 
 .twoColumns {
 	width: 460px;
-	height: 259px;
+	height: 265px;
 	padding: 10px;
 	margin-bottom: 20px;
 	background-color: #e9e9e9;
@@ -88,3 +88,14 @@ ul {
 .starIcon {
 	background: url('../images/star_icon.png') no-repeat;
 }
+
+section#newsEvents ul li {
+	background: url('../images/star_icon.png') no-repeat 0% 15%;
+	list-style: none;
+	margin: 0;
+	padding-left: 16px;
+}
+
+/*section#newsEvents > ul > li {
+	padding-left: 10px;
+}*/
